objects/Source_Object__c.object
<CustomObject   >
    <fields>
        <fullName>Checked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GeoLocation__c</fullName>
        <label>GeoLocation</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One</fullName>
                </value>
                <value>
                    <fullName>Two</fullName>
                </value>
                <value>
                    <fullName>Three</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Parent_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Parent Lookup</label>
        <referenceTo>Source_Parent__c</referenceTo>
        <relationshipLabel>Source Object (Source Parent Lookup)</relationshipLabel>
        <relationshipName>Source_Object1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Parent__c</fullName>
        <label>Source Parent</label>
        <referenceTo>Source_Parent__c</referenceTo>
        <relationshipLabel>Source Object</relationshipLabel>
        <relationshipName>Source_Object</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Text_Area__c</fullName>
        <label>Text Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>